# mini-bi

./: .gitignore  CMakeLists.txt  README.md
scripts/: package_macos_app.sh
src/: Canvas.cpp  Controlpanel.cpp  MainWindow.cpp  MainWindow.h  main.cpp
src/app/: AppController.cpp  AppController.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/data/: CMakeLists.txt
src/data/ingestion/: CSVReader.cpp  CSVReader.h
src/data/table/: DataTable.cpp  DataTable.h
src/logging/: CMakeLists.txt  Log.cpp  Log.h
src/plot/: CMakeLists.txt  PlaceholderPlot.cpp  PlaceholderPlot.h  PlotRenderer.cpp  PlotRenderer.h
src/plot/bar/: BarPlot.cpp  BarPlot.h
src/plot/core/: PlotData.cpp  PlotData.h  PlotRenderer.h
src/plot/line/: LinePlot.cpp  LinePlot.h
src/plot/scatter/: ScatterPlot.cpp  ScatterPlot.h
src/ui/: CMakeLists.txt
src/ui/dialogs/: ImportPreviewDialog.cpp  ImportPreviewDialog.h
src/ui/models/: TableViewModel.cpp  TableViewModel.h
src/ui/widgets/: Canvas.cpp  Canvas.h  Controlpanel.cpp  Controlpanel.h
